fixed footer on small mobiles

--- a/src/scss/_screen.scss
+++ b/src/scss/_screen.scss
@@ -435,7 +435,7 @@
         }
 
         & .products-desc-img {
-          width: 438px;
+          width: 350px;
           margin-top: -30px;
         }
       }
@@ -446,7 +446,7 @@
         margin-top: 50px;
 
         & .products-desc-img {
-          width: 300px;
+          width: 230px;
           margin-right: 0px;
           margin-top: 30px;
         }
@@ -488,13 +488,9 @@
 
           & img {
             position: relative;
-            width: 300px;
+            width: 250px;
             margin-bottom: 5px;
             cursor: pointer;
-
-            // &:hover {
-            //   height: 100%;
-            // }
           }
 
           & p {
@@ -600,6 +596,42 @@
       margin-top: 70px;
 
       & .media {
+        & i {
+          &:not(:last-child) {
+            margin-right: 10px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@mixin small-mobiles {
+  @media screen and (max-width: 380px) {
+    #products-display {
+      .products-display-imgs {
+        margin-top: 20px;
+        grid-template-columns: repeat(2, 1fr);
+
+        & .products-display-img {
+          & img {
+            width: 160px;
+          }
+
+          & p {
+            font-size: 15px;
+          }
+        }
+      }
+    }
+
+    .bottom-footer {
+      margin-top: 70px;
+      @include c.flex(column);
+      align-items: flex-start;
+
+      & .media {
+        margin-top: 10px;
         & i {
           &:not(:last-child) {
             margin-right: 10px;
