--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -658,3 +658,4 @@ footer {
 @include s.small-PCs;
 @include s.tablets;
 @include s.mobiles;
+@include s.small-mobiles;
